# tensorlib

./: CMakeLists.txt  README.md  main.c
src/: constants.h  curve.c  curve.h  elt.c  elt.h  euclidean.c  euclidean.h  euclideancurve.c  exampleCurve.c  examples.c  helper.c  helper.h  inpt.c  inpt.h  main.c  manifold.c  manifold.h  point.c  point.h  sphere.c  sphere.h  tensor.c  tensor.h  tensorfield.c  tensorfield.h  term.c  term.h
